updated patreon link

--- a/lolblurs/index.html
+++ b/lolblurs/index.html
@@ -9,8 +9,8 @@
 
 <body>
 
-    <a id='patreonlink' href='https://www.patreon.com/wolforce'><img src='../images/patreon128.png' width='32px'></a>
-    <a id='patreonlink' class='patreonblur' href='https://www.patreon.com/wolforce'><img src='../images/patreon128.png' width='32px'></a>
+    <a class='patreonlink' href='https://www.patreon.com/wolforce' target="_blank"><img src='../images/patreon128.png' width='32px'></a>
+    <img class='patreonlink patreonblur' src='../images/patreon128.png' width='32px'>
 
     <div id='menu' class='view'>
 
