--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
                     {
                         name: 'Concept',
                         url: 'https://wolforce.herokuapp.com/concept/',
-                        image: './Concept/images/29.png'
+                        image: './images/concept.png'
                     },
                     {
                         name: 'LoL Blurs',
