--- a/blurs/lol/index.html
+++ b/blurs/lol/index.html
@@ -180,7 +180,7 @@
             'zoe',
             'zyra',
         ]
-        champions = ['vi', 'vex']
+
         var blurGame = new BlurGame({
             title: 'LoL Blurs',
             description: `Guess the League of Legends Champion Splash Arts!<br />
@@ -202,6 +202,10 @@
 
             nextRoundText: 'NEXT CHAMPION'
         })
+
+        function debug() {
+            champions = ['vi', 'vex']
+        }
     </script>
 
 </body>
