--- a/blurs/lol/index.html
+++ b/blurs/lol/index.html
@@ -5,6 +5,7 @@
     <script src='../../lib/jquery.min.js'></script>
     <script src="../engine.js"></script>
     <script src='../../patreon.js'></script>
+    <script src='../../backbutton.js'></script>
 </head>
 
 <body>
