new cobra build

--- a/Cobra2/index.html
+++ b/Cobra2/index.html
@@ -7,7 +7,7 @@
   </head>
   <body style="text-align: center">
     <canvas id="unity-canvas" width=960 height=600 style="width: 960px; height: 600px; background: #231F20"></canvas>
-    <script src="Build/buildweb2.loader.js"></script>
+    <script src="Build/buildweb3.loader.js"></script>
     <script>
       if (/iPhone|iPad|iPod|Android/i.test(navigator.userAgent)) {
         // Mobile device style: fill the whole browser client area with the game canvas:
@@ -18,9 +18,9 @@
       }
 
       createUnityInstance(document.querySelector("#unity-canvas"), {
-        dataUrl: "Build/buildweb2.data.br",
-        frameworkUrl: "Build/buildweb2.framework.js.br",
-        codeUrl: "Build/buildweb2.wasm.br",
+        dataUrl: "Build/buildweb3.data",
+        frameworkUrl: "Build/buildweb3.framework.js",
+        codeUrl: "Build/buildweb3.wasm",
         streamingAssetsUrl: "StreamingAssets",
         companyName: "DefaultCompany",
         productName: "Cobra 2",
