cobra link, new urgot splashart

--- a/index.html
+++ b/index.html
@@ -109,6 +109,12 @@
                         image: './images/lolblurs128.png'
                     },
                     {
+                        name: 'Cobra 2',
+                        url: './Cobra2',
+                        image: './images/cobra2.png',
+                        pixelated: true
+                    },
+                    {
                         name: 'Mover',
                         url: './mover',
                         image: './mover/icon.png'
