--- a/blurs/content.html
+++ b/blurs/content.html
@@ -38,6 +38,7 @@
         <button id='nextRoundButton' onclick='blurGame.nextRoundClicked()' class='button box'>NEXT ROUND</button>
         <div id='inputSubmitBox'>
             <input id='input' class='box' autocomplete='off'></input>
+            <div id="autocomplete"></div>
             <button onclick='blurGame.submitClicked()' class='button box'>SUBMIT</button>
         </div>
     </div>
