--- a/blurs/lol/index.html
+++ b/blurs/lol/index.html
@@ -201,7 +201,9 @@
                 return used.length == champions.length
             },
 
-            nextRoundText: 'NEXT CHAMPION'
+            nextRoundText: 'NEXT CHAMPION',
+
+            allNames: champions
         })
 
         function debug() {
