--- a/blurs/pokemon/index.html
+++ b/blurs/pokemon/index.html
@@ -6,6 +6,12 @@
     <script src="../engine.js"></script>
     <script src='../../patreon.js'></script>
     <script src='../../backbutton.js'></script>
+
+    <style>
+        img {
+            image-rendering: pixelated;
+        }
+    </style>
 </head>
 
 <body>
@@ -68,7 +74,9 @@
 
                             nextRoundText: 'NEXT POKEMON',
 
-                            blurMultiplier: .3
+                            blurMultiplier: .3,
+
+                            allNames: allPokemon
                         })
                     })
 
