poke blurs link

--- a/index.html
+++ b/index.html
@@ -109,6 +109,11 @@
                         image: './images/lolblurs128.png'
                     },
                     {
+                        name: 'Poke Blurs',
+                        url: './blurs/pokemon',
+                        image: './images/pokeblurs2.png'
+                    },
+                    {
                         name: 'Cobra 2',
                         url: './Cobra2',
                         image: './images/cobra2.png',
