--- a/software.html
+++ b/software.html
@@ -7,15 +7,25 @@
     <link href="stylesheet.css" rel="stylesheet">
     <title>WolforcePT</title>
     <script src='./lib/jquery.min.js'></script>
+
 </head>
 
 <body>
+
     <script src='./nav.js'></script>
+    <script src='./cards.js'></script>
     <script src='./patreon.js'></script>
 
-    <div id="content">
-        <h1>About</h1>
-    </div>
+    <script>
+        addCards([
+            {
+                name: 'aTV',
+                url: './aTV',
+                image: './aTV/screenshot.png'
+            },
+        ])
+    </script>
+
 </body>
 
 </html>
