lolquiz link on main page

--- a/index.html
+++ b/index.html
@@ -7,6 +7,12 @@
     <link href="stylesheet.css" rel="stylesheet">
     <title>WolforcePT</title>
     <script src='./lib/jquery.min.js'></script>
+
+    <style>
+        h1 {
+            color: white;
+        }
+    </style>
 </head>
 
 <body>
@@ -14,7 +20,8 @@
     <script src='./patreon.js'></script>
 
     <div id="content">
-        <h1>About</h1>
+        <h1>About:</h1>
+        <p>This site serves as an index for all my projects.</p>
     </div>
 </body>
 
