--- a/webgames.html
+++ b/webgames.html
@@ -35,6 +35,11 @@
                 image: './images/lolblurs128.png'
             },
             {
+                name: 'LoL Quiz',
+                url: './lolquiz',
+                image: './images/lolquiz.png'
+            },
+            {
                 name: 'Poke Blurs',
                 url: './blurs/pokemon',
                 image: './images/pokeblurs2.png'
