--- a/lolquiz/index.html
+++ b/lolquiz/index.html
@@ -1,7 +1,7 @@
 <html>
 
 <head>
-    <title>LoL Guess</title>
+    <title>LoL Quiz</title>
     <script src='../lib/jquery.min.js'></script>
     <script src='../patreon.js'></script>
     <script src='../backbutton.js'></script>
