--- a/blurs/pokemon/index.html
+++ b/blurs/pokemon/index.html
@@ -4,8 +4,21 @@
     <title>Poke Blurs</title>
     <script src='../../lib/jquery.min.js'></script>
     <script src="../engine.js"></script>
-    <script src='../../patreon.js'></script>
-    <script src='../../backbutton.js'></script>
+
+    <style>
+        img {
+            image-rendering: crisp-edges;
+            image-rendering: -moz-crisp-edges;
+            /* Firefox */
+            image-rendering: -o-crisp-edges;
+            /* Opera */
+            image-rendering: -webkit-optimize-contrast;
+            /* Webkit (non-standard naming) */
+            -ms-interpolation-mode: nearest-neighbor;
+            /* IE (non-standard property) */
+        }
+    </style>
+
 </head>
 
 <body>
@@ -48,11 +61,11 @@
                         return used.length == allPokemon.length
                     },
 
-                    nextRoundText: 'NEXT CHAMPION',
+                    nextRoundText: 'NEXT POKEMON',
 
                     allNames: allPokemon,
 
-                    blurMultiplier: .9,
+                    blurMultiplier: .8,
 
                 })
             }))
@@ -61,6 +74,9 @@
             allPokemon = ['pikachu', 'raichu']
         }
     </script>
+
+    <script src='../../patreon.js'></script>
+    <script src='../../backbutton.js'></script>
 
 </body>
 
