--- a/blurs/pokemon/index.html
+++ b/blurs/pokemon/index.html
@@ -16,6 +16,7 @@
             /* Webkit (non-standard naming) */
             -ms-interpolation-mode: nearest-neighbor;
             /* IE (non-standard property) */
+            image-rendering: pixelated;
         }
     </style>
 
