new autoep server

--- a/AutoEP/index.html
+++ b/AutoEP/index.html
@@ -34,8 +34,7 @@
 		<div class="header sub">
 			Autonomous Entertainment Platform
 		</div>
-		<input class="login_screen_input" type="text" id="server_address" name="server_address"
-			placeholder="server address">
+		<input class="login_screen_input" type="text" id="server_address" name="server_address" placeholder="server address">
 		<br />
 		<input class="login_screen_input" type="text" id="username" name="username" placeholder="username">
 		<br />
@@ -47,7 +46,7 @@
 			<div id="login_text">Connecting...</div>
 			<br />
 			<div id="login_text_failed" onclick="resetTextFailed()"></div>
-			<div><a href="dist/autoep_server.zip">Download Server</a></div>
+			<div><a href="dist/autoep_server.jar">Download Server</a></div>
 		</div>
 
 		<div id="newtab_arrow" onclick="window.open(window.location.href, '_blank');">↗</div>
@@ -117,8 +116,7 @@
 			<div id="infoline1" class="infoline"></div>
 			<div id="infoline2" class="infoline"></div>
 			<div class="button" onclick="socket.close();">Disconnect</div>
-			<div
-				style="position: absolute; bottom: 0; margin-bottom: 16px; width: 300px; transform: translateX(-24px);">
+			<div style="position: absolute; bottom: 0; margin-bottom: 16px; width: 300px; transform: translateX(-24px);">
 				<!-- <hr style="margin: 10px; 0"> -->
 				<div style="border: solid 1px #272b33; margin: 10px 0;"></div>
 				<div class="text">OP Only:</div>
