--- a/AutoEP/index.html
+++ b/AutoEP/index.html
@@ -21,6 +21,7 @@
 	<script src="src/editing.js"></script>
 	<script src="src/socket.js"></script>
 	<script src="src/canvas.js"></script>
+	<script src="src/chat.js"></script>
 	<script src="src/assets.js"></script>
 	<script src="src/init.js"></script>
 
@@ -124,6 +125,12 @@
 				<div class="button" onclick="restart();">Restart Game</div><br>
 			</div>
 		</div>
+
+		<div id="textbox_wrapper">
+			<div id="textbox_chat">some text</div>
+			<input id="textbox_input"></input>
+		</div>
+
 	</div>
 
 </body>
