google analytics for LoL Blurs

--- a/blurs/lol/index.html
+++ b/blurs/lol/index.html
@@ -10,6 +10,16 @@
 
 <body>
 
+    <!-- Google tag (gtag.js) -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-SRN1JLP7XS"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+
+      gtag('config', 'G-SRN1JLP7XS');
+    </script>
+
     <div id="content"></div>
 
     <!-- <div id="extraButtons" class="bottom2">
